--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,27 @@
 version: '3.2'
-
 services:
+  redis:
+    image: redis:6.0.13-alpine
+    hostname: redis
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.2
 
+  mysql:
+    image: mysql:5.7.34
+    # image: mysql:8.0.23
+    hostname: mysql
+    volumes:
+      - 'db-data:/var/lib/mysql'
+    # ports:
+    #   - '33061:3306'
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=polkascan
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.3
+    
   explorer-api:
     build: explorer-api/.
     image: polkascan/pre-explorer-api:latest
@@ -12,18 +32,20 @@ services:
     environment:
       - PYTHONPATH=/usr/src/app
       - ENVIRONMENT=prod
-      - DB_HOST=mysql
+      - DB_HOST=172.102.1.3
       - DB_PORT=3306
       - DB_USERNAME=root
       - DB_PASSWORD=root
       - DB_NAME=polkascan
-      - SUBSTRATE_RPC_URL=http://substrate-node:9933/
-      - SUBSTRATE_ADDRESS_TYPE=42
+      - SUBSTRATE_RPC_URL=https://rpc-halongbay.polkafoundry.com/
+      - SUBSTRATE_ADDRESS_TYPE=2
       - TYPE_REGISTRY=kusama
       - SUBSTRATE_METADATA_VERSION=9
     depends_on:
       - mysql
-      - substrate-node
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.4
 
   harvester-api:
     build: harvester/.
@@ -33,35 +55,43 @@ services:
       - './harvester:/usr/src/app'
     command: ./start.sh
     environment: &env
-      - CELERY_BROKER=redis://redis:6379/0
-      - CELERY_BACKEND=redis://redis:6379/0
+      - CELERY_BROKER=redis://172.102.1.2:6379/0
+      - CELERY_BACKEND=redis://172.102.1.2:6379/0
       - PYTHONPATH=/usr/src/app:/usr/src/app/py-substrate-interface/:/usr/src/app/py-scale-codec/
       - ENVIRONMENT=prod
-      - DB_HOST=mysql
+      - DB_HOST=172.102.1.3
       - DB_PORT=3306
       - DB_USERNAME=root
       - DB_PASSWORD=root
       - DB_NAME=polkascan
-      - SUBSTRATE_RPC_URL=http://substrate-node:9933/
+      - SUBSTRATE_RPC_URL=https://rpc-halongbay.polkafoundry.com/
       - TYPE_REGISTRY=kusama
-      - SUBSTRATE_ADDRESS_TYPE=42
+      - SUBSTRATE_ADDRESS_TYPE=2
       - SUBSTRATE_METADATA_VERSION=9
+      - BALANCE_SYSTEM_ACCOUNT_MIN_BLOCK=1375086
       - NEW_SESSION_EVENT_HANDLER=True
+      - FINALIZATION_ONLY=1
     depends_on:
       - redis
       - mysql
-      - substrate-node
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.5
 
   harvester-worker:
     build: harvester/.
     image: polkascan/pre-harvester:latest
     volumes:
       - './harvester:/usr/src/app'
+      - './converters.py:/usr/src/app/app/processors/converters.py'
     command: celery -A app.tasks worker --loglevel=INFO
     environment: *env
     depends_on:
       - redis
       - mysql
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.6
 
   harvester-beat:
     build: harvester/.
@@ -73,66 +103,60 @@ services:
     environment: *env
     depends_on:
       - redis
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.7
 
-  harvester-monitor:
-    build: harvester/.
-    image: polkascan/pre-harvester:latest
-    ports:
-      - '5555:5555'
-    command:  flower -A app.tasks --port=5555 --broker=redis://redis:6379/0
-    depends_on:
-      - redis
-
-  redis:
-    image: redis:3.2.11
-    hostname: redis
-
-  mysql:
-    image: mysql:8.0.23
-    hostname: mysql
-    volumes:
-      - 'db-data:/var/lib/mysql'
-    ports:
-      - '33061:3306'
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=polkascan
-
-  substrate-node:
-    image: polkasource/substrate-client:kusama-latest
-    hostname: substrate-node
-    volumes:
-      - 'substrate-data:/data'
-    ports:
-      - '30333:30333'
-      - '9933:9933'
-      - '9944:9944'
-    command: --dev --rpc-external --ws-external --rpc-cors=all --pruning=archive
+  # harvester-monitor:
+  #   build: harvester/.
+  #   image: polkascan/pre-harvester:latest
+  #   # ports:
+  #   #   - '5555:5555'
+  #   command:  flower -A app.tasks --port=5555 --broker=redis://172.102.1.2:6379/0
+  #   depends_on:
+  #     - redis
+  #   networks:
+  #     polkascan_net:
+  #       ipv4_address: 172.102.1.8
 
   explorer-gui:
     image: polkascan/pre-explorer-gui:latest
     build:
       context: explorer-gui/.
       args:
-        NETWORK_NAME: Kusama Dev
-        NETWORK_ID: kusama
+        NETWORK_NAME: Substrate Node Template
+        NETWORK_ID: node-template
         NETWORK_TYPE: pre
-        CHAIN_TYPE: relay
-        NETWORK_TOKEN_SYMBOL: KSM
-        NETWORK_TOKEN_DECIMALS: 12
-        NETWORK_COLOR_CODE: d32e79
-        API_URL: http://127.0.0.1:8080/api/v1
-    ports:
-      - '8080:80'
+        CHAIN_TYPE: para
+        NETWORK_TOKEN_SYMBOL: DEV
+        NETWORK_TOKEN_DECIMALS: 15
+        NETWORK_COLOR_CODE: 777777
+        API_URL: http://172.102.1.9/api/v1
+    volumes:
+      - './polkascan-prod.conf:/etc/nginx/conf.d/polkascan-prod.conf'
+    # ports:
+    #   - '8080:80'
     depends_on:
       - harvester-api
       - explorer-api
+    networks:
+      polkascan_net:
+        ipv4_address: 172.102.1.9
 
-  polkadot-ui:
-    image: polkasource/substrate-ui:polkadot-latest
-    ports:
-      - '8081:80'
+  # polkadot-ui:
+  #   image: polkasource/substrate-ui:polkadot-latest
+  #   # ports:
+  #   #   - '8081:80'
+  #   networks:
+  #     polkascan_net:
+  #       ipv4_address: 172.102.1.10
 
 volumes:
   db-data:
-  substrate-data:
+
+networks:
+  polkascan_net:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.102.0.0/16
