--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,7 +131,7 @@ services:
         NETWORK_TOKEN_SYMBOL: DEV
         NETWORK_TOKEN_DECIMALS: 15
         NETWORK_COLOR_CODE: 777777
-        API_URL: http://172.102.1.9/api/v1
+        API_URL: /api/v1
     volumes:
       - './polkascan-prod.conf:/etc/nginx/conf.d/polkascan-prod.conf'
     # ports:
